--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -7,6 +7,8 @@
   <title>Great Idea!</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Tomorrow&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lacquer&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
   <!--[if lt IE 9]>
@@ -18,83 +20,81 @@
     
   <!-- Header -->
   <header>
-    <div class="headcont">
-      <nav class="headcol">
-        <a href="">Services</a>
-        <a href="">Product</a>
-        <a href="">Vision</a>
-        <a href="">Features</a>
-        <a href="">About</a>
-        <a href="">Contact</a>
-      </nav>    
-      <div class="headcol img">
-        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-      </div>
+    <nav class="headcol">
+      <a href="">Services</a>
+      <a href="">Product</a>
+      <a href="">Vision</a>
+      <a href="">Features</a>
+      <a href="">About</a>
+      <a href="">Contact</a>
+    </nav>    
+    <div class="headcol img">
+      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
     </div>
   </header>
 
   <!-- Subhead -->
   <section class="subhead">
-    <div class="subcont">
-      <div class="col">
-        <h1>Innovation
-         On
+    <div>
+      <h1>Innovation</br>
+         On</br>
          Demand</h1>
-        <button>Get Started</button>
-      </div>
-      <div class="col">
-        <img src="img/header-img.png" alt="Image of a code snippet.">
-      </div>
+      <button>Get Started</button>
+    </div>
+    <div>
+      <img src="img/header-img.png" alt="Image of a code snippet.">
     </div>
   </section>
 
-  <!-- Main Content-->
-  <section class="maincontent">
-    <div class="container1">
-      <div class="col1">
-        <h3>Features</h3>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
-         Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-      </div>
-      <div class="col1">
-        <h3>About</h3>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
-         Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-      </div>
-    </div>
-    <div class="mid-image">
-      <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-    </div>
-    <div class="container2">
-      <div class="col2">    
-        <h3>Services</h3>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
-          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-      </div>
-      <div class="col2"> 
-        <h3>Product</h3>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+  <!-- Main/Footer Wrapper -->
+  <div class="outerdiv">
+    <!-- Main Content-->
+    <section class="maincontent">
+      <div class="container1">
+        <div class="col1">
+          <h3>Features</h3>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
           Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
         </div>
-      <div class="col2"> 
-        <h3>Vision</h3>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        <div class="col1">
+          <h3>About</h3>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
           Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
       </div>
-    </div>
-  </section>
+      <div class="mid-image">
+        <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+      </div>
+      <div class="container2">
+        <div class="col2">    
+          <h3>Services</h3>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+            Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
+        <div class="col2"> 
+          <h3>Product</h3>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+            Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+          </div>
+        <div class="col2"> 
+          <h3>Vision</h3>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+            Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
+      </div>
+    </section>
 
-  <!-- Footer -->
-  <footer>
-    <h4>Contact</h4>
-    <div class="contact">
-      <p>123 Way 456 Street
-       Somewhere, USA</p></br>
-      <p>1 (888) 888-8888</p></br>
-      <p>sales@greatidea.io</p>
-    </div>
-    <p class="copy">Copyright Great Idea! 2018</span>
-  </footer>  
-    
+    <!-- Footer -->
+    <footer>
+      <h4>Contact</h4>
+      <div class="contact">
+        <p>123 Way 456 Street
+        Somewhere, USA</p></br>
+        <p>1 (888) 888-8888</p></br>
+        <p>sales@greatidea.io</p>
+      </div>
+      <p class="copy">Copyright Great Idea! 2018</span>
+    </footer>  
+  </div>   
 </body>
 </html>
