--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -1,27 +1,22 @@
 <!doctype html>
-
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
   <title>Great Idea!</title>
-
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Tomorrow&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lacquer&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
-
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
 <body>
-    <!-- Copy and paste your HTML from the first UI project here -->
-    
+  <!-- Copy and paste your HTML from the first UI project here -->    
   <!-- Header -->
   <header>
     <nav class="headcol">
-      <a href="">Services</a>
+      <a href="services.html">Services</a>
       <a href="">Product</a>
       <a href="">Vision</a>
       <a href="">Features</a>
@@ -46,10 +41,8 @@
     </div>
   </section>
 
-  <!-- Main/Footer Wrapper -->
-  <div class="outerdiv">
-    <!-- Main Content-->
-    <section class="maincontent">
+  <!-- Main Content-->
+  <section class="maincontent">
       <div class="container1">
         <div class="col1">
           <h3>Features</h3>
@@ -82,10 +75,10 @@
             Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
         </div>
       </div>
-    </section>
+  </section>
 
-    <!-- Footer -->
-    <footer>
+  <!-- Footer -->
+  <footer>
       <h4>Contact</h4>
       <div class="contact">
         <p>123 Way 456 Street
@@ -94,7 +87,6 @@
         <p>sales@greatidea.io</p>
       </div>
       <p class="copy">Copyright Great Idea! 2018</span>
-    </footer>  
-  </div>   
+  </footer>    
 </body>
 </html>
