--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -4,17 +4,18 @@
   <meta charset="utf-8">
   <title>Great Idea! - Services</title>
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Tomorrow&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lacquer&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/services.css">
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
 <body>
-
   <!-- Header -->
   <header>
     <nav>
-      <a href="">Services</a>
+      <a href="services.html">Services</a>
       <a href="">Product</a>
       <a href="">Vision</a>
       <a href="">Features</a>
@@ -41,81 +42,70 @@
 
   <!-- Main Content-->
   <section class="maincontent">
-    <div class="">
-      <h3>Digital Design</h3>
-
-      Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-      eleifend. Mauris euismod facilisis iaculis.
-
-      Learn More
+    <div class="row1">
+      <div class="griditem">
+        <h3>Digital Design</h3>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.</p>
+        <button>Learn More</button>
+      </div>
+      <div class="griditem">
+        <h3>UX / UI</h3>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.</p>
+        <button>Learn More</button>
+      </div>
     </div>
-
-    <div>
-      <h3>UX / UI</h3>
-
-      Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-      eleifend. Mauris euismod facilisis iaculis.
-
-      Learn More
-
+    <div class="row2">
+      <div class="griditem">
+        <h3>Digital Marketing</h3>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.</p>
+        <button>Learn More</button>
+      </div>
+      <div class="griditem">
+        <h3>Web Development</h3>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.</p>
+        <button>Learn More</button>
+      </div>
     </div>
-    <div>
-      <h3>Digital Marketing</h3>
-
-      Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-      eleifend. Mauris euismod facilisis iaculis.
-
-      Learn More
-    </div>
-    <div>
-
-      <h3>Web Development</h3>
-
-      Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-      eleifend. Mauris euismod facilisis iaculis.
-
-      Learn More
-    </div>
-    <div>
-
-      <h3>iOS Development</h3>
-
-      Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-      eleifend. Mauris euismod facilisis iaculis.
-
-      Learn More
-    </div>
-    <div>
-
-      <h3>Android Development</h3>
-
-      Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-      eleifend. Mauris euismod facilisis iaculis.
-
-      Learn More
+    <div class="row3">
+      <div class="griditem">
+        <h3>iOS Development</h3>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.</p>
+        <button>Learn More</button>
+      </div>
+      <div class="griditem">
+        <h3>Android Development</h3>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.</p>
+        <button>Learn More</button>
+      </div>
     </div>
   </section>
 
   <!-- Sub Content-->
   <section class="subcontent">
-      Some Facts About Our Services
-
-      Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-      eleifend. Mauris euismod facilisis iaculis.
-
-
-      Awesome thing
-      Amazing thing
-      Cool thing
-      Great thing
-
-      <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+    <div class="sc-div">
+      <h3>Some Facts About Our Services</h3>
+      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+      eleifend. Mauris euismod facilisis iaculis.</p></br>
+      <ul>
+        <li>Awesome thing</li>
+        <li>Amazing thing</li>
+        <li>Cool thing</li>
+        <li>Great thing</li>
+      </ul>
+    </div>
+    <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+    
   </section>
 
   <!-- Footer -->
   <footer>
       Copyright Great Idea! 2018
   </footer>
-
 </body>
 </html>
