--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -21,10 +21,10 @@
       <a href="">Vision</a>
       <a href="">Features</a>
       <a href="">About</a>
-      <a href="">Contact</a>
+      <a href="contact.html">Contact</a>
     </nav>    
     <div class="headcol img">
-      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+      <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
     </div>
   </header>
 
